[tool.poetry]
name = "machine-learning-intro"
version = "0.1.0"
description = ""
authors = ["Awonkhrais <awonkhrais@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.1.7"
sklearn = "^0.0"
pandas = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
